syntax = 'proto3';

import "google/protobuf/timestamp.proto";

package user;

service UserService {
  rpc create (CreateRequest) returns (ResponseSingleUser) {}
  rpc findAll (SearchRequest) returns (ResponseMultipleUser) {}
  rpc findOneById (FindByIdRequest) returns (ResponseSingleUser) {}
  rpc update (UpdateRequest) returns (ResponseSingleUser) {}
  rpc delete (FindByIdRequest) returns (ResponseSingleUser) {}
}


message CreateRequest {
  string fullName = 1;
  string userName = 2;
  string email = 3;
  string password = 4;
}

message SearchRequest {
  optional string fullName = 1;
  optional string userName = 2;
  optional string email = 3;
  optional int32 limit = 4;
  optional string role = 5;
}

message FindByIdRequest {
  string userId = 1;
}

message updateUserDto { 
  optional string fullName = 1;
  optional string userName = 2;
  optional string email = 3;
  optional string password = 4;
}

message ResponseMultipleUser {
  int32 status = 1;
  repeated User data = 2;
  repeated string error = 3;
}

message ResponseSingleUser {
  int32 status = 1;
  User data = 2;
  repeated string error = 3;
}

message UpdateRequest {
  string user_id = 1;
  updateUserDto userDto = 2;
}

enum USER_ROLE {
  ADMIN = 0;
  USER = 1;
}

message Users {
  repeated User user = 1;
}

message User {
  string user_id = 1;
  string fullName = 2;
  string userName = 3;
  string email = 4;
  string password = 5;
  // optional USER_ROLE role = 6;
  google.protobuf.Timestamp created_at = 7;
  optional google.protobuf.Timestamp deleted_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}